Bug 354678 - location bar shows wrong name for folders containing "%" symbol
Summary: location bar shows wrong name for folders containing "%" symbol
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: David Faure
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-11-01 10:25 UTC by kyklops
Modified: 2015-11-09 22:15 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.17
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description kyklops 2015-11-01 10:25:35 UTC
Forlders containing "%" symbol in their names get shown in the location bar with "%25" instead when opened.

Reproducible: Always

Steps to Reproduce:
1. create a new folder named asd%
2. open it 
3. asd%/ is shown as "asd%25" in the location bar
4. clicking on "asd%25" appends a further "25" to the name shown, an error message (correctly) says that folder asd%25 does not exists.

Actual Results:  
asd%/ is shown as "asd%25" in the location bar.
Clicking on "asd%25" appends a further "25" to the name shown, an error message (correctly) says that folder asd%25 does not exists.
Comment 1 Emmanuel Pescosta 2015-11-08 19:24:03 UTC
Thanks for the bug report!
I can reproduce the problem.

Looks like a KUrl -> QUrl porting bug (url encoding failure). The relevant code is in KIO, so I'll reassign this bug report to KIO.
Comment 2 Emmanuel Pescosta 2015-11-09 19:10:22 UTC
Review-Request: https://git.reviewboard.kde.org/r/126009/
Comment 3 Emmanuel Pescosta 2015-11-09 22:15:26 UTC
Git commit 9dbe36f734b5b839b2a6a934fad29d639e954498 by Emmanuel Pescosta.
Committed on 09/11/2015 at 22:14.
Pushed by emmanuelp into branch 'master'.

Fix url encoding problems (e.g. when the path contains a '%') in KUrlNavigator

These changes also fix a weird behavior of KUrlNavigator when button 0 is
pressed. KUrlNavigator always used the local path '/' for button 0 and ignored
the scheme and authority.
REVIEW: 126009
FIXED-IN: 5.17

M  +37   -0    autotests/kurlnavigatortest.cpp
M  +3    -0    autotests/kurlnavigatortest.h
M  +4    -3    src/filewidgets/kurlnavigator.cpp

http://commits.kde.org/kio/9dbe36f734b5b839b2a6a934fad29d639e954498