Fix url encoding problems (e.g. when the path contains a '%') in KUrlNavigator

These changes also fix a weird behavior of KUrlNavigator when button 0 is
pressed. KUrlNavigator always used the local path '/' for button 0 and ignored
the scheme and authority.

BUG: 354678
REVIEW: 126009
FIXED-IN: 5.17