autotests/kurlnavigatortest.cpp
@@ -217,3 +217,40 @@ void KUrlNavigatorTest::testUrlParsing()
     QTest::keyClick(m_navigator->editor(), Qt::Key_Enter);
     QCOMPARE(m_navigator->locationUrl(), url);
 }
+
+void KUrlNavigatorTest::testButtonUrl_data()
+{
+    QTest::addColumn<QUrl>("locationUrl");
+    QTest::addColumn<int>("buttonIndex");
+    QTest::addColumn<QUrl>("expectedButtonUrl");
+
+    QTest::newRow("localPathButtonIndex3") << QUrl::fromLocalFile("/home/foo") << 3 << QUrl::fromLocalFile("/home/foo"); // out of range
+    QTest::newRow("localPathButtonIndex2") << QUrl::fromLocalFile("/home/foo") << 2 << QUrl::fromLocalFile("/home/foo");
+    QTest::newRow("localPathButtonIndex1") << QUrl::fromLocalFile("/home/foo") << 1 << QUrl::fromLocalFile("/home");
+    QTest::newRow("localPathButtonIndex0") << QUrl::fromLocalFile("/home/foo") << 0 << QUrl::fromLocalFile("/");
+
+    QTest::newRow("networkPathButtonIndex1") << QUrl::fromUserInput("network:/konqi.local/share") << 1 << QUrl::fromUserInput("network:/konqi.local");
+    QTest::newRow("networkPathButtonIndex0") << QUrl::fromUserInput("network:/konqi.local/share") << 0 << QUrl::fromUserInput("network:/");
+
+    QTest::newRow("ftpPathButtonIndex1") << QUrl::fromUserInput("ftp://kde.org/home/foo") << 1 << QUrl::fromUserInput("ftp://kde.org/home");
+    QTest::newRow("ftpPathButtonIndex0") << QUrl::fromUserInput("ftp://kde.org/home/foo") << 0 << QUrl::fromUserInput("ftp://kde.org/");
+
+    // bug 354678
+    QTest::newRow("localPathWithPercentage") << QUrl::fromLocalFile("/home/foo %/test") << 2 << QUrl::fromLocalFile("/home/foo %");
+}
+
+void KUrlNavigatorTest::testButtonUrl()
+{
+    QFETCH(QUrl, locationUrl);
+    QFETCH(int, buttonIndex);
+    QFETCH(QUrl, expectedButtonUrl);
+
+    // PREPARE
+    m_navigator->setLocationUrl(locationUrl);
+
+    // WHEN
+    const QUrl buttonUrl = m_navigator->url(buttonIndex);
+
+    // THEN
+    QCOMPARE(buttonUrl, expectedButtonUrl);
+}
